# ContractBot

./: .clocignore  .gitignore  .pdm-python  .pre-commit-config.yaml  .prettierrc.json  Architecture.md  LICENSE  QuickStart.md  README.md  TODO.md  deploy.sh  documents.cfg  documents.cfg-cosine  documents.cfg-l2  documents.cfg-l2-2025-04-11  inference.sh  main.py  openssl.cnf  package-lock.json  pyproject.toml
.github/workflows/: main.yaml
app/: main.py  models.py
app/routers/: infer.py  login.py  query.py
app/utils/: access.py  queues.py
assets/: Questions for AI Tool.md  bossbot-uname.txt
assets/outputs/: maternity.txt
engine/: answer  answers.py  mk_db  run-all-models  search  watch  watch.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/pages/mainView/: MainView.jsx
react/: index.html  package-lock.json  package.json
react/src/: App.css  App.jsx  main.jsx
react/src/api/: api.js
react/src/authentication/: authentication.js
react/src/components/: Egg.jsx  NavBar.jsx  ProtectedRoute.jsx  Question.jsx  RightClickMenu.jsx  SessionTimeout.jsx  Sidebar.jsx
react/src/contexts/: AuthContext.jsx  TopicContext.jsx
react/src/pages/documentsView/: DocumentsView.jsx  FragmentAccordion.jsx  Question.jsx
react/src/pages/login/: Login.jsx
react/src/pages/mainView/: Categories.jsx  Conversation.jsx  Form.jsx  MainView.jsx  ModelPicker.jsx  QuestionInput.jsx  Replies.jsx  Sidebar.jsx
react/src/pages/queryView/: Answer.jsx  Categories.jsx  Conversation.jsx  FeedbackModal.jsx  ModelPicker.jsx  QueryView.jsx  QuestionInput.jsx
react/src/styles/: conversation.css  scrollableContent.css  seiuTheme.js
react/src/utils/: utils.js
tests/unit/: test_model_answer.py
